# INS-Mechanism

./: CMakeLists.txt  README.md
dataset/: dataA15withZeroVelCorrfinal.mat
dataset/02 A15/: 11_31_52_CHA1.gps  11_31_52_CHA4.dsp
src/: GetZeroVelspan.m  algebra.cpp  algebra.h  algorithm.cpp  algorithm.h  blh2ne.m  fileio.cpp  fileio.h  frame.cpp  frame.h  inscmn.h  main.cpp  maxdiff.m  ra_Getangle.m  roughAlign.m  tracePlot.m  types.h
